--- a/resources/css/custom_app.css
+++ b/resources/css/custom_app.css
@@ -972,28 +972,28 @@ li .Deceased {
     padding-left: 32px;
 }
 
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    margin: 0;
-}
+/*::-webkit-scrollbar {*/
+/*    width: 10px;*/
+/*    height: 10px;*/
+/*    margin: 0;*/
+/*}*/
 
-::-webkit-scrollbar-track-piece {
-    background-color: #fff;
-    -webkit-border-radius: 5px;
-}
+/*::-webkit-scrollbar-track-piece {*/
+/*    background-color: #fff;*/
+/*    -webkit-border-radius: 5px;*/
+/*}*/
 
-::-webkit-scrollbar-thumb:vertical {
-    height: 50px;
-    background-color: #ccc;
-    -webkit-border-radius: 5px;
-}
+/*::-webkit-scrollbar-thumb:vertical {*/
+/*    height: 50px;*/
+/*    background-color: #ccc;*/
+/*    -webkit-border-radius: 5px;*/
+/*}*/
 
-::-webkit-scrollbar-thumb:horizontal {
-    height: 50px;
-    background-color: #ccc;
-    -webkit-border-radius: 5px;
-}
+/*::-webkit-scrollbar-thumb:horizontal {*/
+/*    height: 50px;*/
+/*    background-color: #ccc;*/
+/*    -webkit-border-radius: 5px;*/
+/*}*/
 
 .timer {
     float: right;
